kubernetes/manifests/iotingestion/iot-ingestion-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: iot-ingestion
  namespace: default
spec:
  selector:
    matchLabels:
      run: iot-ingestion
  template:
    metadata:
      labels:
        run: iot-ingestion
    spec:
      containers:
      - image: australia-southeast2-docker.pkg.dev/sit-23t1-project-echo-25288b9/project-echo/iot-ingestion-mqtt:2
        imagePullPolicy: IfNotPresent
        name: iot-ingestion
        ports:
        - containerPort: 9001
          protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: iot-ingestion
  namespace: default
  annotations:
    cloud.google.com/backend-config: '{"default": "iot-backendconfig"}'
spec:
  ports:
  - name: port1
    port: 9001
    protocol: TCP
    targetPort: 9001
  - name: port2
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    run: iot-ingestion
  type: NodePort
