kubernetes/manifests/iotingestion/iot-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: iot-ingress
  annotations:
    kubernetes.io/ingress.allow-http: "false"
    kubernetes.io/ingress.global-static-ip-name: iot
    networking.gke.io/managed-certificates: iot-cert
    spec.ingressClassName: gce
spec:
  defaultBackend:
    service:
      name: iot-ingestion
      port:
        number: 9001
  # rules:
  # - http:
  #     paths:
  #     - path: /*
  #       pathType: ImplementationSpecific
  #       backend:
  #         service:
  #           name: iot-ingestion
  #           port:
  #             number: 9001
